tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.instance.missing.type.name/reader-instance-missing-type-name.mon
;; TEST-ID: tests.codegen.reader-error.reader-instance-missing-type-name
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected type name after class name
;; TEST-ATOM: atom.reader.error.reader.instance.missing.type.name
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.instance.missing.type.name
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected type name after class name
;; TEST-READER-PATH: reader.c:4469 parser.instance
;; TEST-CODEGEN-PATH: diagnostic.parser.instance
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:4469 Expected type name after class name
;; TEST-USES-ATOM: atom.reader.error.reader.instance.missing.type.name
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.instance
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.instance.missing.type.name
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.instance.missing.type.name
;; TEST-ATOM-LEAF: atom.reader.error.reader.instance.missing.type.name
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(instance Show)
